# resvg

./: .gitignore  .travis.yml  .typos.toml  AUTHORS  BUILD.adoc  CHANGELOG.md  Cargo.toml  LICENSE.txt  NOTICE.txt  README.md  make-vendored.sh  meson.build  meson_options.txt  run-tests.py  version-bump.md
.github/: README.md  (+2 more)
benches/: Cargo.toml  README.md  curves.rs  filters.rs  layers.rs
bindings/resvg-qt/: Cargo.toml  README.md  build.rs
bindings/resvg-qt/cpp/: qt_capi.cpp  qt_capi.hpp
bindings/resvg-qt/src/: ffi.rs  lib.rs
bindings/resvg-skia/: Cargo.toml  build.rs
bindings/resvg-skia/cpp/: skia_capi.cpp  skia_capi.hpp
bindings/resvg-skia/src/: ffi.rs  lib.rs
c-api/: Cargo.toml  README.md  ResvgQt.h  lib.rs  resvg.h
c-api/examples/cairo/: README.md  example.c
capi/: .gitignore  Cargo.toml  README.md
capi/include/: Doxyfile  ResvgQt.h  resvg.h
capi/qt-wrapper/: ResvgQt.cpp  ResvgQt.h
capi/qtests/: .gitignore  tests.pro  tst_resvgqt.cpp
capi/src/: lib.rs
crates/c-api/: Cargo.toml  README.md  ResvgQt.h  cbindgen.toml  lib.rs  resvg.h
crates/resvg/: Cargo.toml
crates/resvg/examples/: custom_href_resolver.rs  custom_rtree.rs  custom_usvg_tree.rs  draw_bboxes.rs  minimal.rs
crates/resvg/src/: clip.rs  filter.rs  geom.rs  image.rs  lib.rs  main.rs  mask.rs  paint_server.rs  path.rs  render.rs  tree.rs
crates/resvg/tests/: README.md  gen-refs.py  gen-tests.py
crates/svgr/: Cargo.toml
crates/svgr/examples/: custom_href_resolver.rs  draw_bboxes.rs  minimal.rs
crates/svgr/src/: cache.rs  clip.rs  geom.rs  image.rs  lib.rs  main.rs  mask.rs  path.rs  render.rs
crates/svgr/tests/: README.md
crates/svgrtypes/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/svgrtypes/benches/: Cargo.toml  benchmark.rs  path-large.txt
crates/svgrtypes/codegen/: Cargo.toml  README.md  colors.txt  main.rs
crates/svgrtypes/fuzz/: Cargo.toml  README.md
crates/svgrtypes/src/: angle.rs  aspect_ratio.rs  color.rs  colors.rs  directional_position.rs  enable_background.rs  error.rs  filter_functions.rs  font.rs  funciri.rs  length.rs  lib.rs  number.rs  paint.rs  paint_order.rs  path.rs  points.rs  stream.rs  transform.rs  transform_origin.rs  viewbox.rs
crates/usvg/: Cargo.toml  README.md
crates/usvg-parser/: Cargo.toml  README.md
crates/usvg-parser/codegen/: README.md  main.rs
crates/usvg-parser/docs/: post-processing.md
crates/usvg-parser/src/: clippath.rs  converter.rs  filter.rs  image.rs  lib.rs  marker.rs  mask.rs  options.rs  paint_server.rs  rosvgtree_ext.rs  shapes.rs  style.rs  switch.rs  text.rs  units.rs  use_node.rs
crates/usvg-parser/tests/: test.rs
crates/usvg-text-layout/: Cargo.toml
crates/usvg-text-layout/src/: lib.rs
crates/usvg-tree/: Cargo.toml  README.md
crates/usvg-tree/src/: filter.rs  geom.rs  lib.rs  pathdata.rs  text.rs  utils.rs
crates/usvg/codegen/: Cargo.toml  attributes.txt  main.rs
crates/usvg/docs/: post-processing.md  spec.adoc
crates/usvg/src/: lib.rs  main.rs  text_to_paths.rs  writer.rs
crates/usvg/tests/: parser.rs  write.rs
crates/usvgr/: Cargo.toml  README.md
crates/usvgr/codegen/: attributes.txt
crates/usvgr/docs/: spec.adoc
crates/usvgr/src/: hashers.rs  lib.rs  main.rs  text_to_paths.rs  writer.rs
examples/cairo-rs/: Cargo.toml  README.md
resvg-cairo/: Cargo.toml  README.md
resvg-cairo/c-api/: Cargo.toml  README.md  lib.rs  resvg-cairo.h  resvg.h
resvg-cairo/examples/: custom_rtree.rs  draw_bboxes.rs  minimal.rs
resvg-cairo/src/: clip.rs  clip_and_mask.rs  filter.rs  image.rs  layers.rs  lib.rs  main.rs  mask.rs  paint_server.rs  path.rs  render.rs  style.rs
resvg-qt/: Cargo.toml  LICENSE.txt  README.md  build.rs
resvg-qt/c-api/: Cargo.toml  README.md  ResvgQt.h  lib.rs
resvg-qt/cpp/: qt_capi.cpp  qt_capi.hpp
resvg-qt/examples/: custom_rtree.rs  draw_bboxes.rs  minimal.rs
resvg-qt/qt-bindings/: qt_capi.cpp  qt_capi.hpp
resvg-qt/src/: clip.rs  clip_and_mask.rs  ffi.rs  filter.rs  image.rs  layers.rs  lib.rs  main.rs  mask.rs  paint_server.rs  path.rs  qt.rs  render.rs
resvg-raqote/: Cargo.toml  README.md
resvg-raqote/examples/: custom_rtree.rs  draw_bboxes.rs  minimal.rs
resvg-raqote/src/: clip.rs  clip_and_mask.rs  filter.rs  image.rs  layers.rs  lib.rs  main.rs  mask.rs  paint_server.rs  path.rs  render.rs
resvg-skia/: Cargo.toml  README.md  build.rs
resvg-skia/c-api/: Cargo.toml  README.md  lib.rs  resvg-skia.h  usvg_capi.rs
resvg-skia/cpp/: skia_capi.cpp  skia_capi.hpp
resvg-skia/examples/: custom_rtree.rs  draw_bboxes.rs  minimal.rs
resvg-skia/skia-bindings/: LICENSE.txt  skia_capi.cpp  skia_capi.hpp
resvg-skia/src/: clip.rs  clip_and_mask.rs  ffi.rs  filter.rs  image.rs  layers.rs  lib.rs  main.rs  mask.rs  paint_server.rs  path.rs  render.rs  skia.rs
rosvgtree/: Cargo.toml  LICENSE-MIT  README.md
rosvgtree/codegen/: Cargo.toml  README.md  main.rs
rosvgtree/examples/: attributes.rs  parse.rs
rosvgtree/src/: lib.rs  names.rs  parse.rs  text.rs
svgfilters/: CHANGELOG.md  Cargo.toml
svgfilters/src/: box_blur.rs  color_matrix.rs  component_transfer.rs  composite.rs  convolve_matrix.rs  displacement_map.rs  iir_blur.rs  lib.rs  lighting.rs  morphology.rs  turbulence.rs
testing-tools/regression/: Cargo.toml  README.md  allow-cairo.txt  allow-qt.txt  allow-raqote.txt  allow-skia.txt  main.rs  regression.py
tests/regression/: Cargo.toml  allow.txt
usvg/: CHANGELOG.md  Cargo.toml  README.md
usvg-text-layout/: Cargo.toml
usvg-text-layout/src/: lib.rs
usvg/c-api/: README.md  resvg.h  usvg_capi.rs
usvg/codegen/: Cargo.toml  README.md  attributes.txt  elements.txt  main.rs
usvg/docs/: spec.adoc  usvg_spec.adoc
usvg/src/: clippath.rs  converter.rs  error.rs  export.rs  filter.rs  fontdb.rs  fontdb_ext.rs  geom.rs  image.rs  lib.rs  main.rs  marker.rs  mask.rs  numbers.rs  options.rs  paint_server.rs  pathdata.rs  rosvgtree_ext.rs  shapes.rs  style.rs  switch.rs  text.rs  traits.rs  units.rs  use_node.rs  utils.rs  writer.rs
usvg/testing_tools/: allow.csv  cache.csv  regression.py
usvg/tests/: api.rs  cli.rs  test.rs
(+590 files in other folders)
