[package]
name = "resvg"
version = "0.23.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "skia"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG rendering library."
repository = "https://github.com/RazrFalcon/resvg"
exclude = ["tests"]

[workspace]
members = ["c-api", "svgfilters", "usvg"]

[[bin]]
name = "resvg"
required-features = ["filter", "text", "system-fonts", "memmap-fonts"]

[dependencies]
gif = { version = "0.11", optional = true }
jpeg-decoder = { version = "0.3", default-features = false, features = ["platform_independent"], optional = true }
log = "0.4"
pico-args =  { version = "0.5", features = ["eq-separator"] }
png = { version = "0.17", optional = true }
rgb = "0.8"
svgfilters = { path = "svgfilters", version = "0.4", optional = true }
svgtypes = "0.8"
tiny-skia = "0.8.2"
usvg = { path = "usvg", version = "0.23.0", default-features = false }

[dev-dependencies]
once_cell = "1.5"

[features]
default = ["filter", "text", "system-fonts", "memmap-fonts", "raster-images"]
# enables SVG Filter support
# adds around 100KiB to your binary
filter = ["svgfilters", "usvg/filter"]
# enables SVG Text support
# adds around 500KiB to your binary
text = ["usvg/text"]
# enables system fonts loading (only for `text`)
system-fonts = ["usvg/system-fonts"]
# enables font files memmaping for faster loading (only for `text`)
memmap-fonts = ["usvg/memmap-fonts"]
# enables the --dump-svg flag in CLI
# adds around 50KiB to your binary
dump-svg = ["usvg/export"]
# enables decoding and rendering of raster images
# when disabled, `image` elements with SVG data will still be rendered
raster-images = ["gif", "jpeg-decoder", "png"]
