[package]
name = "resvg"
version = "0.31.1"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG rendering library."
repository = "https://github.com/RazrFalcon/resvg"
exclude = ["tests"]

[workspace]
members = [
    "c-api",
    "rosvgtree",
    "svgfilters",
    "usvg",
    "usvg-parser",
    "usvg-text-layout",
    "usvg-tree",
]

[[bin]]
name = "resvg"
required-features = ["filter", "text", "system-fonts", "memmap-fonts"]

[dependencies]
gif = { version = "0.12", optional = true }
jpeg-decoder = { version = "0.3", default-features = false, features = ["platform_independent"], optional = true }
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
png = { version = "0.17", optional = true }
rgb = "0.8"
svgfilters = { path = "svgfilters", version = "0.4", optional = true }
svgtypes = "0.11"
tiny-skia = { git = "https://github.com/RazrFalcon/tiny-skia", rev = "465404a" }
usvg = { path = "usvg", version = "0.31.0", default-features = false }

[dev-dependencies]
once_cell = "1.5"

[features]
default = ["filter", "text", "system-fonts", "memmap-fonts", "raster-images"]
# Enables SVG Filter support.
# Adds around 100KiB to your binary.
filter = ["svgfilters"]
# Enables SVG Text support.
# Adds around 400KiB to your binary.
text = ["usvg/text"]
# Enables system fonts loading (only for `text`).
system-fonts = ["usvg/system-fonts"]
# Enables font files memmaping for faster loading (only for `text`).
memmap-fonts = ["usvg/memmap-fonts"]
# Enables decoding and rendering of raster images.
# When disabled, `image` elements with SVG data will still be rendered.
# Adds around 200KiB to your binary.
raster-images = ["gif", "jpeg-decoder", "png"]
