[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
license = "MIT"

[workspace]

[dependencies]
resvg = { path = "../", features = ["cairo-backend", "qt-backend", "raqote-backend", "skia-backend"] }
bencher = "0.1"

[[bench]]
name = "curves"
path = "curves.rs"
harness = false

[[bench]]
name = "filters"
path = "filters.rs"
harness = false

[[bench]]
name = "layers"
path = "layers.rs"
harness = false

[profile.release]
lto = true
