[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
usvg = { path = "../usvg" }
resvg-cairo = { path = "../resvg-cairo" }
resvg-qt = { path = "../resvg-qt" }
resvg-skia = { path = "../resvg-skia" }
resvg-raqote = { path = "../resvg-raqote" }
bencher = "0.1"

[[bench]]
name = "curves"
path = "curves.rs"
harness = false

[[bench]]
name = "filters"
path = "filters.rs"
harness = false

[[bench]]
name = "layers"
path = "layers.rs"
harness = false

[profile.release]
lto = true
