[package]
name = "resvg-capi"
version = "0.3.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "capi"]
license = "MPL-2.0"
workspace = ".."

[lib]
name = "resvg"
crate-type = ["cdylib"]

[dependencies]
fern = "0.5"
log = "0.4"
resvg = { path = "../" }
# cairo backend
glib = { version = "0.5.0", optional = true }
cairo-sys-rs = { version = "0.6.0", optional = true }

[features]
cairo-backend = ["resvg/cairo-backend", "glib", "cairo-sys-rs"]
qt-backend = ["resvg/qt-backend"]
