[package]
name = "resvg-capi"
version = "0.9.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "capi"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg"
crate-type = ["cdylib", "staticlib"]

[dependencies]
fern = "=0.5.8" # fixed version without chrono
log = "0.4"
resvg = { path = "../" }
# cairo backend
cairo-sys-rs = { version = "0.9.0", optional = true }

[features]
default = ["text"]
cairo-backend = ["resvg/cairo-backend", "cairo-sys-rs"]
qt-backend = ["resvg/qt-backend"]
skia-backend = ["resvg/skia-backend"]
raqote-backend = ["resvg/raqote-backend"]
text = ["resvg/text"]
