[package]
name = "resvg-cairo"
version = "0.9.1"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster"]
license = "MPL-2.0"
edition = "2018"
description = "cairo backend for resvg."
repository = "https://github.com/RazrFalcon/resvg"

[workspace]
members = ["c-api"]

[badges]
travis-ci = { repository = "RazrFalcon/resvg" }

[dependencies]
cairo-rs = { version = "0.8.0", default-features = false, features = ["png"] }
jpeg-decoder = { version = "0.1.15", default-features = false }
log = "0.4"
pico-args = "0.2"
png = { version = "0.15", default-features = false }
rgb = "0.8"
svgfilters = { path = "../svgfilters" }
usvg = { path = "../usvg", default-features = false }

[features]
default = ["text"]
text = ["usvg/text"] # enables SVG Text support
