[package]
name = "resvg-qt"
version = "0.4.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["qt", "ffi"]
license = "MIT"
description = "A minimal bindings to Qt used by resvg."
repository = "https://github.com/RazrFalcon/resvg"
workspace = ".."

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
