[package]
name = "resvg-qt"
version = "0.10.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster"]
license = "MPL-2.0"
edition = "2018"
description = "Qt backend for resvg."
repository = "https://github.com/RazrFalcon/resvg"

[workspace]
members = ["c-api"]

[badges]
travis-ci = { repository = "RazrFalcon/resvg" }

[[bin]]
name = "resvg-qt"
required-features = ["text"]

[dependencies]
log = "0.4"
pico-args = "0.3"
rgb = "0.8"
svgfilters = "0.1"
usvg = { path = "../usvg", default-features = false }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[features]
default = ["text"]
text = ["usvg/text"] # enables SVG Text support
