[package]
name = "resvg-skia"
version = "0.10.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>", "JaFenix <jspicer@phoenixcontact.com>"]
keywords = ["svg", "render", "raster", "skia"]
license = "MPL-2.0"
edition = "2018"
description = "Skia backend for resvg."
repository = "https://github.com/RazrFalcon/resvg"

[workspace]
members = ["c-api"]

[badges]
travis-ci = { repository = "RazrFalcon/resvg" }

[[bin]]
name = "resvg-skia"
required-features = ["text"]

[dependencies]
jpeg-decoder = { version = "0.1", default-features = false }
log = "0.4"
pico-args = "0.3"
png = { version = "0.16", default-features = false }
rgb = "0.8"
svgfilters = "0.1"
usvg = { path = "../usvg", default-features = false }

[build-dependencies]
cc = "1.0"

[features]
default = ["text"]
text = ["usvg/text"] # enables SVG Text support
