[package]
name = "svgfilters"
version = "0.4.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "filter"]
license = "MPL-2.0"
edition = "2018"
description = "Implementation of various SVG filters."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg/tree/master/svgfilters"
documentation = "https://docs.rs/svgfilters/"
readme = "README.md"
workspace = ".."

[dependencies]
rgb = "0.8"
float-cmp = { version = "0.9", default-features = false, features = ["std"] }
