[package]
name = "usvg"
version = "0.28.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG simplification library."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]
workspace = ".."

[dependencies]
base64 = "0.13" # for embedded images
data-url = "0.2" # for href parsing
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] } # SVGZ decoding
imagesize = "0.10.1" # raster images size detection
kurbo = "0.8" # Bezier curves utils
log = "0.4"
rctree = "0.5"
roxmltree = "0.15" # XML parsing
simplecss = "0.2" # CSS parsing and selector
siphasher = "0.3" # perfect hash implementation
strict-num = "0.1"
svgtypes = "0.8.2"
