[package]
name = "resvg-skia"
version = "0.9.1"
edition = "2018"
description = "A wrapper for skia-safe crate used by resvg."
repository = "https://github.com/velyan/resvg"
workspace = "../.."

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies]
# Make this "0" so it's easier to keep up to date
skia-safe = "0"
png = "0.16.8"
