[package]
name = "svgr-capi"
version = "0.40.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2021"
workspace = "../.."

[lib]
name = "svgr"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
svgr = { path = "../svgr", default-features = false }

[features]
default = ["text", "system-fonts", "memmap-fonts", "raster-images"]
# enables SVG Text support
# adds around 500KiB to your binary
text = ["svgr/text"]
# enables system fonts loading (only for `text`)
system-fonts = ["svgr/system-fonts"]
# enables font files memmaping for faster loading (only for `text`)
memmap-fonts = ["svgr/memmap-fonts"]
raster-images = ["svgr/raster-images"]
