[package]
name = "resvg-capi"
version = "0.41.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2021"
workspace = "../.."

[lib]
name = "resvg"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
resvg = { path = "../resvg", default-features = false }

[features]
default = ["text", "system-fonts", "memmap-fonts", "raster-images"]
# enables SVG Text support
# adds around 500KiB to your binary
text = ["resvg/text"]
# enables system fonts loading (only for `text`)
system-fonts = ["resvg/system-fonts"]
# enables font files memmaping for faster loading (only for `text`)
memmap-fonts = ["resvg/memmap-fonts"]
raster-images = ["resvg/raster-images"]
