[package]
name = "resvg"
version = "0.44.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG rendering library."
repository = "https://github.com/RazrFalcon/resvg"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "resvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
gif = { version = "0.13", optional = true }
image-webp = { version = "0.1.3", optional = true }
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
rgb = "0.8"
svgtypes = "0.15.2"
tiny-skia = "0.11.4"
usvg = { path = "../usvg", version = "0.44.0", default-features = false }
zune-jpeg = { version = "0.4", optional = true }

[dev-dependencies]
once_cell = "1.5"
png = "0.17"

[features]
default = ["text", "system-fonts", "memmap-fonts", "raster-images"]
# Enables SVG Text support.
# Adds around 400KiB to your binary.
text = ["usvg/text"]
# Enables system fonts loading (only for `text`).
system-fonts = ["usvg/system-fonts"]
# Enables font files memmaping for faster loading (only for `text`).
memmap-fonts = ["usvg/memmap-fonts"]
# Enables decoding and rendering of raster images.
# When disabled, `image` elements with SVG data will still be rendered.
# Adds around 200KiB to your binary.
raster-images = ["gif", "image-webp", "dep:zune-jpeg"]
