[package]
name = "svgr"
version = "0.40.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG rendering library."
repository = "https://github.com/RazrFalcon/svgr"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "svgr"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
gif = { version = "0.12", optional = true }
jpeg-decoder = { version = "0.3", default-features = false, features = ["platform_independent"], optional = true }
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
png = { version = "0.17", optional = true }
rgb = "0.8"
tiny-skia = "0.11.4"
usvgr = { path = "../usvgr", version = "0.40.0", default-features = false }
svgrtypes = { path = "../svgrtypes" }
lru = "0.12.3"
ahash = "0.8.11"

[dev-dependencies]
image = "0.25.0"
once_cell = "1.5"

[features]
default = ["text", "system-fonts", "memmap-fonts", "raster-images"]
# Enables SVG Text support.
# Adds around 400KiB to your binary.
text = ["usvgr/text"]
# Enables system fonts loading (only for `text`).
system-fonts = ["usvgr/system-fonts"]
# Enables font files memmaping for faster loading (only for `text`).
memmap-fonts = ["usvgr/memmap-fonts"]
# Enables decoding and rendering of raster images.
# When disabled, `image` elements with SVG data will still be rendered.
# Adds around 200KiB to your binary.
raster-images = ["gif", "jpeg-decoder", "png"]
