[package]
name = "usvg-text-layout"
version = "0.34.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG text layout implementation."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg-text-layout/"
workspace = "../.."

[dependencies]
fontdb = { version = "0.14", default-features = false }
kurbo = "0.9" # Bezier curves utils for text-on-path
log = "0.4"
rustybuzz = "0.7"
unicode-bidi = "0.3"
unicode-script = "0.5"
unicode-vo = "0.1"
usvg-tree = { path = "../usvg-tree", version = "0.34.0" }

[features]
default = ["system-fonts", "memmap-fonts"]
# Enables system fonts loading.
system-fonts = ["fontdb/fs", "fontdb/fontconfig"]
# Enables font files memmaping for faster loading.
memmap-fonts = ["fontdb/memmap"]
