[package]
name = "usvg-tree"
version = "0.36.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG tree representation used by usvg."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg-tree/"
readme = "README.md"
workspace = "../.."

[dependencies]
rctree = "0.5"
strict-num = "0.1.1"
svgtypes = { git = "https://github.com/RazrFalcon/svgtypes" }
tiny-skia-path = "0.11.3"
