[package]
name = "usvg"
version = "0.37.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG simplification library."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "usvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
base64 = "0.21" # for embedded images
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
usvg-parser = { path = "../usvg-parser", version = "0.37.0" }
usvg-tree = { path = "../usvg-tree", version = "0.37.0" }
xmlwriter = "0.1"

[dependencies.usvg-text-layout]
path = "../usvg-text-layout"
version = "0.37.0"
default-features = false
optional = true

[dev-dependencies]
once_cell = "1.5"

[features]
default = ["text", "system-fonts", "memmap-fonts"]
# Enables text-to-path conversion support.
# Adds around 400KiB to your binary.
text = ["usvg-text-layout"]
# Enables system fonts loading.
system-fonts = ["usvg-text-layout/system-fonts"]
# Enables font files memmaping for faster loading.
memmap-fonts = ["usvg-text-layout/memmap-fonts"]
