[package]
name = "usvg"
version = "0.41.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG simplification library."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "usvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
base64 = "0.22" # for embedded images
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
strict-num = "0.1.1"
svgtypes = "0.15.0"
tiny-skia-path = "0.11.4"
xmlwriter = "0.1"

# parser
data-url = "0.3" # for href parsing
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] } # SVGZ decoding
imagesize = "0.12" # raster images size detection
kurbo = "0.11" # Bezier curves utils
roxmltree = "0.19"
simplecss = "0.2"
siphasher = "1.0" # perfect hash implementation

# text
fontdb = { version = "0.16.1", default-features = false, optional = true }
rustybuzz = { version = "0.13", optional = true }
unicode-bidi = { version = "0.3", optional = true }
unicode-script = { version = "0.5", optional = true }
unicode-vo = { version = "0.1", optional = true }

[dev-dependencies]
once_cell = "1.5"

[features]
default = ["text", "system-fonts", "memmap-fonts"]
# Enables text-to-path conversion support.
# Adds around 400KiB to your binary.
text = ["fontdb", "rustybuzz", "unicode-bidi", "unicode-script", "unicode-vo"]
# Enables system fonts loading.
system-fonts = ["fontdb/fs", "fontdb/fontconfig"]
# Enables font files memmaping for faster loading.
memmap-fonts = ["fontdb/memmap"]
