[package]
name = "cairo-example"
version = "0.1.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
edition = "2018"

# exclude from the main workspace
[workspace]

[dependencies]
gio = "0.8"
gtk = "0.8"
log = "0.4"
fern = "=0.5.8" # fixed version without chrono

[dependencies.resvg]
path = "../.."
features = ["cairo-backend"]
